syntax = "proto3";

package ecommerce.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "ordermgt/v1;ordermgt";

service OrderManagementService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc CreateOrders(stream CreateOrdersRequest) returns (CreateOrdersResponse);
  rpc GetOrder(google.protobuf.StringValue) returns (GetOrderResponse);
  rpc GetOrders(google.protobuf.Empty) returns (stream GetOrdersResponse);
  rpc PackOrders(stream PackOrdersRequest) returns (stream PackOrdersResponse);
}

message CreateOrdersRequest {
  float price = 1;
}
message CreateOrdersResponse {
  repeated string created_orders = 1;
}

message CreateOrderRequest {
  float price = 1;
}
message CreateOrderResponse {
  string id = 1;
  float price = 2;
}

message GetOrdersResponse {
  string id = 1;
  float price = 2;
}

message GetOrderResponse {
  string id = 1;
  float price = 2;
}

message PackOrdersRequest {
  string id = 1;
}
message PackedOrder {
  string id = 1;
  float price = 2;
}
message PackOrdersResponse {
  repeated PackedOrder orders = 1;
}
